# LunaLang

./: .drom  .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.md  Cli.opam  Compiler.opam  LICENSE.md  Lex.opam  Makefile  README.md  ast.opam  ast_test.opam  cli.opam  code.dyri  compiler.opam  drom.toml  dune-project  index.html  lex.opam  main.ll  typing.opam
.github/workflows/: main.yml  workflow.yml
LunaLangDocs/: Overview.md  Syntax.md  Type checker.md
ast/: index.html
ast/Ast/: index.html
ast/doc/: index.mld
ast/src/: ast.mli  astparsed.ml  dune  typedast.ml
ast/test/: ast_test.ml  ast_test.mli  dune
ast_test/: index.html
ast_test/Ast_test/: index.html
cli/: cli.ml  design.html  dune  index.html  main.ml
cli/doc/: design.mld  dune  index.mld
cli/src/: cli.ml  dune
compiler/: dune  index.html
compiler/Compiler/: index.html
compiler/doc/: dune
compiler/src/: compiler.ml  dune
compiler/test/: compile.ml  dune
docs/: index.html
docs/doc/: index.html
docs/sphinx/: index.html
lex/: ast.ml  dune  error.ml  index.html  lex.ml  lex.mli  lexer.mll  parser.mly  typing.ml
lex/Lex/: index.html
lex/doc/: dune  index.mld
lex/src/: dune  error.ml  lex.ml  lex.mli  lexer.mll  parser.mly
lex/test/: dune  lex.ml
luna_tests/: main.luna
opam/: ast.opam  cli.opam  compiler.opam  lex.opam  luna_lang.opam  typing.opam
sphinx/: about.rst  conf.py  index.rst  install.rst  license.rst
src/: dune  luna.ml  toplevel.ml
src/ast/: ast.mli  ast_test.ml  ast_test.mli  common.ml  main.ml  package.toml  parsed.ml  typed.ml
src/cli/: cli.ml  dune
src/compiler/: backends.ml  compile.ml  compiler.ml  compiler.mli  dune  index.mld  main.ml  package.toml
src/lex/: dune  lex.ml  lex_test.ml  main.ml  package.toml  parser.messages
src/luna_lang/: dune  index.mld  main.ml  package.toml
src/parser/: dune  errors.ml  lexer.mll  parse.mly  parser.ml  parser.mli
src/runtime/: dune  runtime.ml  runtime.mli
src/type_checker/: dune  env.ml  errors.ml  type_checker.ml  type_checker.mli
src/typing/: dune  main.ml  package.toml  typing.mli  typing_test.ml
test/: dune  lextest.ml
test/expect-tests/: dune
test/inline-tests/: dune
test/output-tests/: dune
tests/parse_test/: dune  parse_test.ml
typing/: index.html
typing/doc/: dune  (+1 more)
(+53 files in other folders)
